--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ keywords = ["build", "release", "versioning", "automation"]
 categories = ["command-line-utilities", "development-tools"]
 
 [dependencies]
+clap = { version = "4.4.6", features = ["derive"] }
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
