--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,10 @@ categories = ["command-line-utilities", "development-tools"]
 
 [dependencies]
 clap = { version = "4.4.6", features = ["derive"] }
+serde_yaml = "0.9.25"
+serde = { version = "1.0.189", features = ["derive"] }
+anyhow = "1.0.75"
+regex = "1.10.2"
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
