--- a/.github/workflows/test-actions.yml
+++ b/.github/workflows/test-actions.yml
@@ -12,3 +12,46 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./github-actions/setup-versioned-files
       - run: versioned-files --version
+
+  test-setup-versioned-files-with-specific-version:
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./github-actions/setup-versioned-files
+        with:
+          version: 0.3.0
+      - run: versioned-files --version | grep 0.3.0
+
+  test-versioned-files-update:
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, windows-latest, macos-latest ]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          path: repo
+      - name: Create Example File
+        shell: bash
+        run: echo "The current version is 1.2.3" >example.txt
+      - name: Create versioned-files.yml
+        shell: bash
+        run: |
+          cat <<EOF | tee versioned-files.yml
+          locations:
+            - !string-pattern
+              file: example.txt
+              pattern: version is {{version}}
+          EOF
+      - uses: ./repo/github-actions/versioned-files
+        with:
+          action: update
+          version: 1.3.0
+      - name: Check files has been substituted
+        shell: bash
+        run: |
+          cat example.txt
+          grep "The current version is 1.3.0" example.txt
