--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,10 +23,15 @@ jobs:
     if: github.ref == 'refs/heads/main' && needs.run-tests.outputs.will-bump == 'true'
     steps:
       - uses: tomphp/github-actions/checkout-rust-project@v0.2.0
-      - uses: tomphp/versioned-files/github-actions/versioned-files@v0.4.0
+      - uses: actions-rs/cargo@v1.0.3
+        name: Build release version
         with:
-          action: update
-          version: ${{ needs.run-tests.outputs.bump-version }}
+          args: --release --locked
+          command: build
+      - run: target/release/versioned-files update ${VERSION#v}
+        env:
+          VERSION: ${{ needs.run-tests.outputs.bump-version }}
+        shell: bash
       - name: Store updated files
         uses: actions/upload-artifact@v3
         with:
