ci: Restructure job dependencies

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,18 +9,27 @@ permissions:
   contents: write
 
 jobs:
+  check-conventional-commits:
+    uses: armakuni/github-actions/.github/workflows/check-conventional-commits.yml@v0.18.1
+
   run-tests:
     uses: ./.github/workflows/run-tests.yml
 
   test-github-actions:
     uses: ./.github/workflows/test-actions.yml
 
+  all-checks-passed:
+    runs-on: ubuntu-latest
+    needs:
+      - check-conventional-commits
+      - run-tests
+      - test-github-actions
+
   bump-cargo-version:
     runs-on: ubuntu-latest
     needs:
-      - run-tests
-      - test-github-actions
-    if: github.ref == 'refs/heads/main' && needs.run-tests.outputs.will-bump == 'true'
+      - check-conventional-commits
+    if: github.ref == 'refs/heads/main' && needs.check-conventional-commits.outputs.will-bump == 'true'
     steps:
       - uses: tomphp/github-actions/checkout-rust-project@v0.2.0
       - name: Strip version prefix
@@ -28,7 +37,7 @@ jobs:
         shell: bash
         run: echo "version=${VERSION#v}" >> "$GITHUB_OUTPUT"
         env:
-          VERSION: ${{ needs.run-tests.outputs.bump-version }}
+          VERSION: ${{ needs.check-conventional-commits.outputs.bump-version }}
       - name: Bump versions in files
         uses: ./github-actions/versioned-files
         with:
@@ -46,7 +55,7 @@ jobs:
     if: github.ref == 'refs/heads/main'
     runs-on: ${{ matrix.os }}
     needs:
-      - run-tests
+      - all-checks-passed
       - bump-cargo-version
     steps:
       - uses: tomphp/github-actions/checkout-rust-project@v0.2.0
@@ -83,7 +92,6 @@ jobs:
   tag-and-release:
     needs:
       - build-binaries
-      - bump-cargo-version
     uses: armakuni/github-actions/.github/workflows/tag-and-release.yml@v0.18.1
     with:
       download-artifacts: true
