--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ serde_yaml = "0.9.25"
 serde = { version = "1.0.189", features = ["derive"] }
 anyhow = "1.0.75"
 regex = "1.10.2"
+tokio = { version = "1.33.0", features = ["full"] }
+async-stream = "0.3.5"
+futures = "0.3.28"
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
