refactor: Use UUIDs to tie events together

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ regex = "1.10.2"
 tokio = { version = "1.33.0", features = ["full"] }
 async-stream = "0.3.5"
 futures = "0.3.28"
+uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }
 
 [dev-dependencies]
 assert_cmd = "2.0.12"
